fix long nicknames sometimes line-wrapping

--- a/src/themes/fennec/sidebars/sidebar/player/name/name.css
+++ b/src/themes/fennec/sidebars/sidebar/player/name/name.css
@@ -6,6 +6,9 @@
 
 	padding: 0 0.5rem;
 	font-weight: 700;
+
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .name.--right {
